--- a/.github/workflows/sst-deploy.yml
+++ b/.github/workflows/sst-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy SST Application
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   deploy:
@@ -11,7 +11,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
-      - name: Build
-        run: npm run build
       - name: Deploy
-        run: npx sst deploy --stage production --var myVar=${{ secrets.MY_SECRET }}
+        run: npx sst deploy --stage production --var myVar=${{ secrets.GITHUB_TOKEN }}
