--- a/.github/workflows/sst-deploy.yml
+++ b/.github/workflows/sst-deploy.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Deploy
-        run: npx sst deploy --stage production --var myVar=${{ vars.TEST }}
+        run: npx sst deploy --stage production
