--- a/.github/workflows/sst-deploy.yml
+++ b/.github/workflows/sst-deploy.yml
@@ -1,8 +1,16 @@
 name: Deploy SST Application
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
+    inputs:
+      stage:
+        description: "Stage to deploy to"
+        required: true
+        default: "production"
+        type: choice
+        options:
+          - "production"
+          - "staging"
 
 jobs:
   deploy:
@@ -21,4 +29,4 @@ jobs:
         run: npm ci
 
       - name: Deploy
-        run: npx sst deploy --stage production
+        run: npx sst deploy --stage ${{ github.event.inputs.stage }}
